feat: add counter entity and officer frontend
