# src/models/dao/counterDAO.ts
@@ -1,18 +1,23 @@
-import {Entity, ManyToMany, OneToMany, PrimaryColumn, PrimaryGeneratedColumn} from "typeorm";
+import {Entity, JoinTable, ManyToMany, OneToMany, PrimaryColumn, PrimaryGeneratedColumn} from "typeorm";
 import {ServiceDAO} from "@dao/serviceDAO";
 import {QueueDAO} from "@dao/queueDAO";
 
 @Entity("counter")
 export class CounterDAO {
 
-    @PrimaryGeneratedColumn('increment', { type: 'int', unsigned: true })
+    @PrimaryColumn()
     id: number;
 
     @ManyToMany(
         () => ServiceDAO,
-        (service) => service.id,
+        (service) => service.counters,
         { cascade: true }
     )
+    @JoinTable({
+        name: "counter_services",
+        joinColumn: { name: "counter_id", referencedColumnName: "id" },
+        inverseJoinColumn: { name: "service_id", referencedColumnName: "id" }
+    })
     services: ServiceDAO[]
 
     @OneToMany(
