# src/routes/queueRoutes.ts
@@ -1,5 +1,11 @@
 import {Router} from "express";
-import {getAllQueues, getQueueByService, nextCustomer} from "@controllers/queueController";
+import {
+    closeQueueEntry,
+    getAllQueues,
+    getQueueByService,
+    getServedByCounter,
+    nextCustomer
+} from "@controllers/queueController";
 
 const router = Router({mergeParams:true});
 
@@ -37,8 +43,25 @@ router.post('/next/:counterId', async (req, res, next) => {
     }
 });
 
+router.get('/served/:counterId', async (req, res, next) => {
+    try {
+        const counterId = parseInt(req.params.counterId);
+        const result = await getServedByCounter(counterId);
+        res.status(200).json(result);
+    } catch (error) {
+        next(error);
+    }
+})
 
-
+router.post('/:ticket_id/close', async (req, res, next) => {
+    try {
+        const ticket_id = parseInt(req.params.ticket_id);
+        await closeQueueEntry(ticket_id);
+        res.status(200).send(); // OK
+    } catch (error) {
+        next(error);
+    }
+})
 
 
 
